crates/mabo-doc/tests/snapshots/render__render@struct_many_ws.mabo.snap
---
source: crates/mabo-doc/tests/render.rs
description: "/// Some comment\n       struct      Sample<\n            T\n        >  {\n\n      a:    u32    @1,\n      b:    bool   @2,\n      c:    T      @3,\n    }"
input_file: crates/mabo-parser/tests/inputs/struct_many_ws.mabo
---
--- struct_many_ws/index.html

<!DOCTYPE html>
<html lang="en">
  <head>
    <meta charset="utf-8" />
    <meta name="viewport" content="width=device-width, initial-scale=1" />

    
    <link rel="stylesheet" href="../assets/style.css" />

    <title>struct_many_ws - Mabo</title>
  </head>
  <body>
    <nav>
    </nav>
    <main>
<div class="section">
  <h2>Schema struct_many_ws</h2>
  <div class="markdown pl-6">
    
  </div>
</div>
<div class="section">
  <h3>Modules</h3>
  <table>
  </table>
</div>
<div class="section">
  <h3>Structs</h3>
  <table>
    <tr>
      <td class="pr-8">
        <a class="text-lg name-struct" href="struct.Sample.html">Sample</a>
      </td>
      <td>
        <p>Some comment</p>
      </td>
    </tr>
  </table>
</div>
<div class="section">
  <h3>Enums</h3>
  <table>
  </table>
</div>
<div class="section">
  <h3>Aliases</h3>
  <table>
  </table>
</div>
<div class="section">
  <h3>Constants</h3>
  <table>
  </table>
</div>
    </main>
  </body>
</html>

--- struct_many_ws/struct.Sample.html

<!DOCTYPE html>
<html lang="en">
  <head>
    <meta charset="utf-8" />
    <meta name="viewport" content="width=device-width, initial-scale=1" />

    
    <link rel="stylesheet" href="../assets/style.css" />

    <title>Sample - Mabo</title>
  </head>
  <body>
    <nav>
    </nav>
    <main>
<div class="section">
  <h2>
    Struct
    <a href="index.html">struct_many_ws</a>::<span class="name-struct">Sample</span>
  </h2>
  <pre class="item-definition my-2">struct Sample&#60;T&#62; {
    a: u32 @1,
    b: bool @2,
    c: T @3,
}</pre>
  <div class="markdown pl-6">
    <p>Some comment</p>
  </div>
</div>
<div class="section">
  <h3>Metadata</h3>
  <div class="pl-6 mt-2">
    <p>The next free ID is <code class="font-bold">4</code></p>
  </div>
</div>
<div class="section">
  <h3>Fields</h3>
  <ul>
    <li class="field-definition">
      <code>
        <span class="field-name">a</span>:
        <span class="field-type">u32</span>
        <span class="field-id">@1</span>
      </code>
      <div class="markdown pl-4">
        
      </div>
      <div class="pl-4">
        <h4 class="my-2">Metadata</h4>
        <div class="text-sm">
          <p>The size range is:</p>
          <div
            class="markdown markdown-sm markdown-p:mb-1 markdown-ul:m-0 markdown-ul:pl-4 markdown-li:m-0 markdown-li:pl-0">
            <p><strong>u32</strong> <code>1..5</code></p>
          </div>
        </div>
      </div>
    </li>
    <li class="field-definition">
      <code>
        <span class="field-name">b</span>:
        <span class="field-type">bool</span>
        <span class="field-id">@2</span>
      </code>
      <div class="markdown pl-4">
        
      </div>
      <div class="pl-4">
        <h4 class="my-2">Metadata</h4>
        <div class="text-sm">
          <p>The size range is:</p>
          <div
            class="markdown markdown-sm markdown-p:mb-1 markdown-ul:m-0 markdown-ul:pl-4 markdown-li:m-0 markdown-li:pl-0">
            <p><strong>bool</strong> <code>1</code></p>
          </div>
        </div>
      </div>
    </li>
    <li class="field-definition">
      <code>
        <span class="field-name">c</span>:
        <span class="field-type">T</span>
        <span class="field-id">@3</span>
      </code>
      <div class="markdown pl-4">
        
      </div>
    </li>
  </ul>
</div>

    </main>
  </body>
</html>
